# fake_minecraft_server

./: Cargo.toml
src/: extensions.rs  logger.rs  main.rs  packets.rs  socket.rs
src/packets/: handler.rs  mod.rs  packets.rs  server_status.rs  types.rs
src/packets/clientbound/: handshake.rs  mod.rs  status.rs
src/packets/incoming/: handler.rs  handshake.rs  mod.rs  packets.rs  status.rs
src/packets/incoming/unknown/: packets.rs
src/packets/serverbound/: handshake.rs  mod.rs  status.rs
